--- a/src/locale/Ar.json
+++ b/src/locale/Ar.json
@@ -40,5 +40,12 @@
   "Mobile__Number": "رقم الهاتف المحمول",
   "Address": "عنوان",
   "error__message": "لا يمكن أن يكون هذا الحقل فارغًا!",
-  "Send": "إرسال"
+  "Send": "إرسال",
+  "Why_Choose_Us": "لماذا نحن",
+  "Brand_Optics": "براد اوبتكس",
+  "Dior_Optics": "دايور اوبتكس",
+  "project_One": "المشروع الاول",
+  "project_Two": "المشروع الثانى",
+  "project_Three": "المشروع الثالث"
+
 }
