--- a/src/locale/Ar.json
+++ b/src/locale/Ar.json
@@ -46,6 +46,7 @@
   "Dior_Optics": "دايور اوبتكس",
   "project_One": "المشروع الاول",
   "project_Two": "المشروع الثانى",
-  "project_Three": "المشروع الثالث"
-
+  "project_Three": "المشروع الثالث",
+  "location": "ويكان ، المحكمة ، منشأة الأوقاف ، كفر الدوار ، محافظة البحيرة 22621",
+  "Show_Location": "موقعنا"
 }
