--- a/src/locale/En.json
+++ b/src/locale/En.json
@@ -46,5 +46,7 @@
   "Dior_Optics": "Dior Optics",
   "project_One": "project One",
   "project_Two": "project Two",
-  "project_Three": "project Three"
+  "project_Three": "project Three",
+  "location": "We Can، Al Mahkama, Monshaat Al Awqaf, Kafr El Dawwar, El Beheira Governorate 22621",
+  "Show_Location": "Show Location"
 }
