--- a/src/locale/En.json
+++ b/src/locale/En.json
@@ -27,13 +27,13 @@
   "Contact_Phones": "Contact Phones",
   "Our_Location": "Our Location",
   "footer__desc": "© 2022 We Can Wooden Products. All Rights Reserved.",
-  "who_we_are?": "who we are?",
+  "Who_we_are?": "Who we are?",
   "about__1desc": "We Can Company was established in 2010, specialising in wood-based products. We are located in Egypt and our main objective is to supply high-quality products at affordable prices across our website and platforms.",
   "Our_vision!": "Our vision!",
   "about__2desc": "We have extensive experience in this field, We have a team of highly qualified professionals who are capable of meeting your expectations and needs. Our experience in the industry has enabled us to clearly understand what our customers need to create the home of their dreams.",
   "Our_mission!": "Our mission!",
   "about__3desc": "Our mission is to offer a high level of service to all. We want to provide that service in a period of inflation so that everyone can continue to enjoy their home. We are determined to find ways to make our products even more affordable while using the finest materials and components.",
-  "Our_history!": "our history!",
+  "Our_history!": "Our history!",
   "about__4desc": "We try to be a model of hope and sustainability, we try to make sure our products are sustainable. We are here with honesty and integrity. Caring for other people is integral to our vision. That is why we are taking the time to come up with the best possible solutions. We concentrate on the here and now, basing our decisions on what is most convenient to our users.",
   "Your__Name": "Your Name",
   "Email__Address": "Email Address",
