--- a/src/locale/Ar.json
+++ b/src/locale/Ar.json
@@ -30,11 +30,11 @@
   "who_we_are?": "من نحن؟",
   "about__1desc": "تأسست شركة We Can في عام 2010 ، وهي متخصصة في المنتجات الخشبية. نحن موجودون في مصر وهدفنا الرئيسي هو توفير منتجات عالية الجودة بأسعار معقولة عبر موقعنا ومنصاتنا.",
   "our_vision": "رؤيتنا!",
-  "about__2desc": "لدينا خبرة واسعة في هذا المجال ، لدينا فريق من المهنيين المؤهلين تأهيلا عاليا القادرين على تلبية توقعاتك واحتياجاتك. مكنتنا تجربتنا في الصناعة من فهم ما يحتاجه عملاؤنا بوضوح لإنشاء منزل أحلامهم.",
+  "about__2desc": "لدينا خبرة واسعة في هذا المجال ، لدينا فريق من المهنيين المؤهلين تأهيلا عاليا القادرين على تلبية توقعاتك واحتياجاتك. مكنتنا تجربتنا في الصناعة من فهم ما يحتاجه عملاؤنا بوضوح لإنشاء منزل أحلامهم",
   "our_mission": "مهمتنا!",
-  "about__3desc": "لدينا خبرة واسعة في هذا المجال ، لدينا فريق من المهنيين المؤهلين تأهيلا عاليا القادرين على تلبية توقعاتك واحتياجاتك. مكنتنا تجربتنا في الصناعة من فهم ما يحتاجه عملاؤنا بوضوح لإنشاء منزل أحلامهم.",
+  "about__3desc": "مهمتنا هي تقديم مستوى عال من الخدمة للجميع. نريد تقديم هذه الخدمة في فترة تضخم حتى يتمكن الجميع من الاستمتاع ببيوتهم. نحن مصممون على إيجاد طرق لجعل منتجاتنا بأسعار معقولة مع استخدام أجود المواد والمكونات",
   "our_history!": "تاريخنا!",
-  "about__4desc": "لدينا خبرة واسعة في هذا المجال ، لدينا فريق من المهنيين المؤهلين تأهيلا عاليا القادرين على تلبية توقعاتك واحتياجاتك. مكنتنا تجربتنا في الصناعة من فهم ما يحتاجه عملاؤنا بوضوح لإنشاء منزل أحلامهم.",
+  "about__4desc": "نحاول أن نكون نموذجًا للأمل والاستدامة ، ونحاول التأكد من أن منتجاتنا مستدامة. نحن هنا بصدق ونزاهة. رعاية الآخرين جزء لا يتجزأ من رؤيتنا. هذا هو السبب في أننا نأخذ الوقت الكافي للتوصل إلى أفضل الحلول الممكنة. نحن نركز على ما هو موجود الآن ، ونبني قراراتنا على ما هو أكثر ملاءمة لمستخدمينا",
   "Your__Name": "اسمك",
   "Email__Address": "عنوان البريد الالكترونى",
   "Mobile__Number": "رقم الهاتف المحمول",
