--- a/src/locale/En.json
+++ b/src/locale/En.json
@@ -27,7 +27,7 @@
   "Contact_Phones": "Contact Phones",
   "Our_Location": "Our Location",
   "footer__desc": "© 2022 We Can Wooden Products. All Rights Reserved.",
-  "Who_we_are?": "Who we are?",
+  "who_we_are?": "Who we are?",
   "about__1desc": "We Can Company was established in 2010, specialising in wood-based products. We are located in Egypt and our main objective is to supply high-quality products at affordable prices across our website and platforms.",
   "Our_vision!": "Our vision!",
   "about__2desc": "We have extensive experience in this field, We have a team of highly qualified professionals who are capable of meeting your expectations and needs. Our experience in the industry has enabled us to clearly understand what our customers need to create the home of their dreams.",
