--- a/src/locale/Ar.json
+++ b/src/locale/Ar.json
@@ -1,13 +1,13 @@
 {
   "main": "الرئيسية",
-  "About_Us": "نبذة عنا",
+  "About_Us": "من نحن",
   "Gallary": "معرض الاعمال",
   "Our_Projects": "مشاريعنا",
   "Contact_Us": "اتصل بنا",
-  "WE_CAN": "ويكان",
-  "Wooden_Products": "وودن بروداكتس",
-  "hero_desc": "ويكان هي شركة B2B و B2C مكرسة لتصميم وتصنيع المنتجات الخشبية في عدة فئات.",
-  "Work_With_Us": "اعمل معنا",
+  "WE_CAN": "وي كان",
+  "Wooden_Products": "للأعمال الخشبية والديكور",
+  "hero_desc": "وي كان هي شركة تجارية وإستثمارية مكرسة لتصنيع وتصميم المنتجات الخشبية وأعمال الديكور.",
+  "Work_With_Us": "تواصل معنا",
   "Download_Catalogue": "تحميل الكتالوج",
   "Categories": "الاقسام",
   "Show_More": "المزيد",
@@ -34,7 +34,7 @@
   "Our_mission!": "مهمتنا!",
   "about__3desc": "مهمتنا هي تقديم مستوى عال من الخدمة للجميع. نريد تقديم هذه الخدمة في فترة تضخم حتى يتمكن الجميع من الاستمتاع ببيوتهم. نحن مصممون على إيجاد طرق لجعل منتجاتنا بأسعار معقولة مع استخدام أجود المواد والمكونات",
   "Our_history!": "تاريخنا!",
-  "about__4desc": "نحاول أن نكون نموذجًا للأمل والاستدامة ، ونحاول التأكد من أن منتجاتنا مستدامة. نحن هنا بصدق ونزاهة. رعاية الآخرين جزء لا يتجزأ من رؤيتنا. هذا هو السبب في أننا نأخذ الوقت الكافي للتوصل إلى أفضل الحلول الممكنة. نحن نركز على ما هو موجود الآن ، ونبني قراراتنا على ما هو أكثر ملاءمة لمستخدمينا",
+  "about__4desc": "لدينا خبرة واسعة في هذا المجال , لدينا فريق من المهندسين والمهنيين المؤهلين على تلبية توقعاتك واحتياجاتك. ومن خلال تجربتنا, اصبح لدينا ما يكفي من الفهم لما يحتاجه عملاؤنا بوضوح لإنشاء أفكارهم من خلال هذه الصناعة.",
   "Your__Name": "اسمك",
   "Email__Address": "عنوان البريد الالكترونى",
   "Mobile__Number": "رقم الهاتف المحمول",
@@ -42,11 +42,11 @@
   "error__message": "لا يمكن أن يكون هذا الحقل فارغًا!",
   "Send": "إرسال",
   "Why_Choose_Us": "لماذا نحن",
-  "Brand_Optics": "براد اوبتكس",
-  "Dior_Optics": "دايور اوبتكس",
-  "project_One": "المشروع الاول",
-  "project_Two": "المشروع الثانى",
-  "project_Three": "المشروع الثالث",
+  "Brand_Optics": "Brand Optics",
+  "Dior_Optics": "Dior Optics",
+  "project_One": "project One",
+  "project_Two": "project Two",
+  "project_Three": "project Three",
   "location": "ويكان ، المحكمة ، منشأة الأوقاف ، كفر الدوار ، محافظة البحيرة 22621",
   "Show_Location": "موقعنا"
 }
